--- a/.travis.yml
+++ b/.travis.yml
@@ -17,8 +17,8 @@ install:
     curl -sL https://deb.nodesource.com/setup_8.x -o nodesource_setup.sh
     bash nodesource_setup.sh;
     apt-get update;
-    apt-get install -y nodejs;"
+    apt-get install -y nodejs;
+    node -v;"
 
 script:
-  - docker exec -t ubuntu-test bash -c "node -v"
-
+  -node -v
